--- a/u01_schnecken.html
+++ b/u01_schnecken.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Schnecken</title>
 </head>
 <body>
 <script src="u01_schnecken.js"></script>
